--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,23 @@
+sudo: false
+
 language: cpp
 
 compiler:
   - clang
   - gcc
 
-before_install:
-  - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
-
-  - if [ "$CXX" == "clang++" ]; then sudo add-apt-repository -y ppa:h-rayflood/llvm; fi
-
-  - sudo apt-get update -qq
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    - llvm-toolchain-precise-3.8
+    packages:
+    - g++-6
+    - clang-3.8
 
 install:
-  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-6; fi
   - if [ "$CXX" = "g++" ]; then export CXX="g++-6"; fi
-
-  - if [ "$CXX" == "clang++" ]; then sudo apt-get install --allow-unauthenticated -qq clang-3.4; fi
-  - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.4"; fi
-
+  - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.8"; fi
   - sudo apt-get install -qq git cmake
 
 before_script:
